tests/parser-test-files/bad-files/define.8.bad.error
error: Unknown variable
  --> test:8:3
   |
 8 |    (DataType int))
   |     ^^^^^^^^ unknown variable
help: Did you mean a constructor of type DATATYPE?
 8 |   (DataType int))
   |    --------
