tests/parser-test-files/bad-files/define.8.bad.coalton
;; BAD: Reference to type instead of constructor
(package test-package)

(define-type DataType
  (Data1 Integer))

(define (return-data int)
  (DataType int))
